fix spacing

--- a/frontend/src/stylesheets/pages/_resources.scss
+++ b/frontend/src/stylesheets/pages/_resources.scss
@@ -16,10 +16,10 @@
   flex: 1;
   display: flex;
   align-items: center;
+}
 
-  img {
-    height: 160px;
-  }
+.resourceImg {
+  height: 160px;
 }
 
 .resourceSummary {
@@ -121,8 +121,7 @@
   }
   
   .resourceImg {
-    height: 150px;
-    padding-right: 30px;
+    height: 140px;
     margin-bottom: 40px;
   }
   
@@ -153,7 +152,6 @@
   .legendContainer {
     height: 2500px;
     margin-top: 2px;
-    padding: 0 30px 0 24px;
   }
   
   .legend {
